@@ -1,6 +1,7 @@
 3-17-2014: MATT LAVOIE
 ==========
 * removing mod-audit per RA-370
+* adding *-auto-mupdate support for ubercart, user_relationships, vote_up_down
 
 2-10-2014: MATT LAVOIE
 ==========
